# agent-filesystem

./: .dockerignore  .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  Dockerfile  Dockerfile.mcp  Dockerfile.redis  Makefile  README.md  RELEASE_NOTES.md  SKILL.md  docker-compose.yml  example.afs.config.json  example.raf.config.json  go.mod  go.sum  pyproject.toml  test.json  test.py
Agent Filesystem Coder Edition/: AFS Situation Room.html  Design System.html  Login.html  styles.css  tokens.css
agent-site/: AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
agent_filesystem/: __init__.py  cli.py  client.py  exceptions.py
cli/: Makefile  afs_commands.go  afs_commands_test.go  afs_diff.go  afs_grep.go  afs_grep_test.go  afs_hash.go  afs_import_review.go  afs_import_review_test.go  afs_import_scan.go  afs_local.go  afs_materialize.go  afs_run_save_test.go  afs_session_reset.go  afs_setup_test.go  afs_store.go  afs_store_test.go  afs_surface_test.go  afs_types.go  config_commands.go  config_commands_test.go  controlplane_client.go  go.mod  go.sum  main.go  migration_ignore.go  migration_ignore_test.go  migration_pipeline.go  migration_pipeline_test.go  mount_backend.go  mount_backend_test.go  qmd_autoindex.go  raf_commands.go  raf_commands_test.go  raf_diff.go  raf_hash.go  raf_keys.go  raf_local.go  raf_materialize.go  raf_materialize_test.go  (+12 more)
docs/: README.md  afs-cloud-control-plane-byodb-design.md  afs-cloud-control-plane-design.md  afs-cloud-execution-plan.md  afs-cloud-standalone-design.md  afs-control-plane-api.md  afs-hybrid-architecture.md  afs-phase1-execution-plan.md  agent-filesystem-competitive-analysis.md  agent-filesystem-sessions-roadmap.md  agent-filesystem.md  cli-reference.md  mcp-reference.md  performance.md  raf-control-plane-api.md  raf-hybrid-architecture.md  raf-phase1-execution-plan.md  todo.md  (+3 more)
sdk/python/: .pre-commit-config.yaml  MANIFEST.in  README.md  api-docs.md  pyproject.toml
sdk/python/src/redis_afs/: __init__.py  _mcp.py  _paths.py  client.py  models.py
sdk/python/src/redis_afs/aio/: _http.py  _mount.py  _resources.py  _sync.py
sdk/python/tests/: test_aio.py  test_client.py
(+837 files in other folders)
