[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "redis-afs-sdk"
version = "0.1.0"
description = "Python SDK for the AFS control plane and agent filesystem mounts."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Redis" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
