[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "redis-afs"
version = "0.1.0"
description = "Python SDK for the AFS control plane and agent filesystem mounts."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
authors = [{ name = "Redis" }]
keywords = [
  "afs",
  "agent-filesystem",
  "redis",
  "sdk",
  "mcp",
  "workspace",
  "checkpoint",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
async = ["httpx>=0.27"]
# Development tooling (lint + format + git hooks). Pinned to match
# .pre-commit-config.yaml and the CI lint job.
dev = [
  "ruff==0.15.18",
  "pre-commit>=3.5",
]

[project.urls]
Homepage = "https://github.com/redis/agent-filesystem/tree/main/sdk/python"
Repository = "https://github.com/redis/agent-filesystem"
Issues = "https://github.com/redis/agent-filesystem/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# pycodestyle errors, pyflakes, isort, pyupgrade.
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Re-export modules intentionally import names without using them.
"__init__.py" = ["F401"]
